# folder-size-exporter

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
